# Automata

./: Conway.hs  ListZipper.hs  LoopZipper.hs  Main.hs  Plane.hs  Torus.hs  Universe.hs  automata.cabal
