name:              automata
version:           0.0.0
synopsis:          A game of life automata
description:       A comonadic game of life simulator
homepage:          https://github.com/fabianbergmark/Automata
category:          Web
author:            Fabian Bergmark
maintainer:        fabian.bergmark@gmail.com
license:           BSD2
cabal-version:     >= 1.10
build-type:        Simple

source-repository head
  type:     git
  location: https://github.com/fabianbergmark/Automata

executable automata
    default-language: Haskell2010

    main-is: Main.hs

    other-modules: Conway
                   ListZipper
                   LoopZipper
                   Main
                   Plane
                   Torus
                   Universe

    ghc-options: -fno-warn-orphans -fno-warn-unused-binds -fno-warn-unused-matches
           
    build-depends: base,
                   comonad,
                   data-default,
                   containers,
                   time,
                   wx